force-app/main/default/objects/Lead_Assigned__e/Lead_Assigned__e.object-meta.xml
<CustomObject>
    <description>Published after lead assignment for async downstream processing.</description>
    <label>Lead Assigned</label>
    <pluralLabel>Lead Assigned Events</pluralLabel>
</CustomObject>