force-app/main/default/objects/Lead_Assigned__e/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Lead Id</description>
</CustomField>