force-app/main/default/objects/Lead_Assigned__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Text</type>
    <length>20</length>
    <description>Priority</description>
</CustomField>