force-app/main/default/objects/Lead_Assigned__e/fields/Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Rep_Id__c</fullName>
    <label>Rep Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Rep Id</description>
</CustomField>